--- a/en.lproj/MBVPortalViewController.xib
+++ b/en.lproj/MBVPortalViewController.xib
@@ -7,7 +7,9 @@
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="MBPortalViewController">
             <connections>
+                <outlet property="labelUnderline" destination="Ql0-co-TRQ" id="n92-Is-HNT"/>
                 <outlet property="messagesController" destination="20" id="249"/>
+                <outlet property="portalLabel" destination="16" id="aQd-sQ-WFN"/>
                 <outlet property="tableView" destination="204" id="250"/>
                 <outlet property="view" destination="1" id="15"/>
             </connections>
@@ -15,7 +17,7 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application"/>
         <customView focusRingType="none" appearanceType="lightContent" id="1" userLabel="Portal View">
-            <rect key="frame" x="0.0" y="0.0" width="264" height="320"/>
+            <rect key="frame" x="0.0" y="0.0" width="264" height="319.99999999019161"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES"/>
             <subviews>
                 <box autoresizesSubviews="NO" focusRingType="none" borderWidth="0.0" title="Portal" boxType="custom" borderType="line" titlePosition="noTitle" id="2" userLabel="portalBox" customClass="MBPortalView">
@@ -35,7 +37,7 @@
                                         <textField verticalHuggingPriority="750" id="16" userLabel="portalLabel">
                                             <rect key="frame" x="29" y="25" width="200" height="16"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMinY="YES"/>
-                                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" allowsUndo="NO" sendsActionOnEndEditing="YES" alignment="center" title="Label" drawsBackground="YES" id="17">
+                                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" allowsUndo="NO" sendsActionOnEndEditing="YES" alignment="center" title="Label" drawsBackground="YES" allowsEditingTextAttributes="YES" id="17">
                                                 <font key="font" size="14" name="MyriadPro-Regular"/>
                                                 <color key="textColor" name="headerColor" catalog="System" colorSpace="catalog"/>
                                                 <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -47,7 +49,7 @@
                                             </connections>
                                         </textField>
                                         <searchField verticalHuggingPriority="750" id="3" userLabel="portalSearch">
-                                            <rect key="frame" x="29" y="7" width="202" height="19"/>
+                                            <rect key="frame" x="29" y="6" width="202" height="19"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                             <searchFieldCell key="cell" controlSize="mini" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" borderStyle="bezel" placeholderString="Subject" usesSingleLineMode="YES" bezelStyle="round" sendsSearchStringImmediately="YES" maximumRecents="10" id="4">
                                                 <font key="font" size="10" name="HelveticaNeue"/>
@@ -100,6 +102,13 @@
                                                 <action selector="shrinkTableRows:" target="-2" id="252"/>
                                             </connections>
                                         </button>
+                                        <box autoresizesSubviews="NO" appearanceType="lightContent" verticalHuggingPriority="750" title="Box" boxType="separator" titlePosition="noTitle" id="Ql0-co-TRQ" userLabel="Unused Horizontal Line">
+                                            <rect key="frame" x="52" y="22" width="156" height="5"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                            <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
+                                            <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                            <font key="titleFont" metaFont="system"/>
+                                        </box>
                                     </subviews>
                                 </view>
                                 <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
@@ -199,10 +208,10 @@
                                                                     <connections>
                                                                         <binding destination="209" name="value" keyPath="objectValue.addressFrom" id="bHK-Oc-WLx">
                                                                             <dictionary key="options">
-                                                                                <string key="NSValueTransformerName">MBSimpleRFC822AddressToStringTransformer</string>
+                                                                                <bool key="NSAllowsEditingMultipleValuesSelection" value="NO"/>
                                                                                 <bool key="NSContinuouslyUpdatesValue" value="YES"/>
                                                                                 <bool key="NSRaisesForNotApplicableKeys" value="NO"/>
-                                                                                <bool key="NSAllowsEditingMultipleValuesSelection" value="NO"/>
+                                                                                <string key="NSValueTransformerName">MBSimpleRFC822AddressToStringTransformer</string>
                                                                             </dictionary>
                                                                         </binding>
                                                                     </connections>
