--- a/en.lproj/MainMenu.xib
+++ b/en.lproj/MainMenu.xib
@@ -23,14 +23,14 @@
                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 <subviews>
                     <box autoresizesSubviews="NO" title="Box" boxType="custom" borderType="none" titlePosition="noTitle" translatesAutoresizingMaskIntoConstraints="NO" id="1505">
-                        <rect key="frame" x="0.0" y="651" width="1024" height="36"/>
+                        <rect key="frame" x="0.0" y="663" width="1024" height="24"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                         <view key="contentView">
-                            <rect key="frame" x="0.0" y="0.0" width="1024" height="36"/>
+                            <rect key="frame" x="0.0" y="0.0" width="1024" height="24"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <subviews>
                                 <button toolTip="Minimize the Accounts listing" translatesAutoresizingMaskIntoConstraints="NO" id="852" userLabel="Collapse Square Button">
-                                    <rect key="frame" x="20" y="8" width="47" height="20"/>
+                                    <rect key="frame" x="20" y="2" width="47" height="20"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="20" id="WNR-eR-b6y"/>
@@ -45,7 +45,7 @@
                                     </connections>
                                 </button>
                                 <progressIndicator horizontalHuggingPriority="750" verticalHuggingPriority="750" maxValue="100" displayedWhenStopped="NO" bezeled="NO" indeterminate="YES" controlSize="small" style="spinning" translatesAutoresizingMaskIntoConstraints="NO" id="1212">
-                                    <rect key="frame" x="137" y="10" width="16" height="16"/>
+                                    <rect key="frame" x="137" y="4" width="16" height="16"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="16" id="czh-ef-ghK"/>
@@ -54,7 +54,7 @@
                                     <accessibility help="Syncing email"/>
                                 </progressIndicator>
                                 <button toolTip="Synchronize accounts" translatesAutoresizingMaskIntoConstraints="NO" id="1077" userLabel="Load Accounts Button">
-                                    <rect key="frame" x="108" y="12" width="20" height="12"/>
+                                    <rect key="frame" x="108" y="6" width="20" height="12"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="NSRefreshTemplate" imagePosition="only" alignment="center" imageScaling="proportionallyDown" inset="2" id="1078">
                                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -66,7 +66,7 @@
                                     </connections>
                                 </button>
                                 <button hidden="YES" toolTip="Synchronize accounts" translatesAutoresizingMaskIntoConstraints="NO" id="1273" userLabel="Cancel Load Accounts Button">
-                                    <rect key="frame" x="108" y="8" width="20" height="20"/>
+                                    <rect key="frame" x="108" y="2" width="20" height="20"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="20" id="STg-s0-riz"/>
@@ -82,7 +82,7 @@
                                     </connections>
                                 </button>
                                 <button toolTip="Open a portal editor" translatesAutoresizingMaskIntoConstraints="NO" id="1103">
-                                    <rect key="frame" x="964" y="8" width="20" height="20"/>
+                                    <rect key="frame" x="964" y="2" width="20" height="20"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="20" id="d4l-lu-edg"/>
@@ -98,7 +98,7 @@
                                     </connections>
                                 </button>
                                 <popUpButton toolTip="Pop up a menu to add an account or folder" translatesAutoresizingMaskIntoConstraints="NO" id="1569" userLabel="Sidebar Add Menu">
-                                    <rect key="frame" x="211" y="8" width="61" height="20"/>
+                                    <rect key="frame" x="211" y="2" width="61" height="20"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="61" id="Hdv-6h-vPC"/>
@@ -146,17 +146,14 @@
                             <constraint firstItem="1273" firstAttribute="leading" secondItem="1505" secondAttribute="leading" constant="108" id="6dy-wg-ow2"/>
                             <constraint firstItem="1273" firstAttribute="centerY" secondItem="1077" secondAttribute="centerY" id="7dj-pb-VlU"/>
                             <constraint firstItem="1212" firstAttribute="leading" secondItem="1077" secondAttribute="trailing" constant="9" id="9t2-hG-lpi"/>
-                            <constraint firstAttribute="bottom" secondItem="1103" secondAttribute="bottom" constant="8" id="MBT-j2-0Mc"/>
-                            <constraint firstItem="852" firstAttribute="top" secondItem="1505" secondAttribute="top" constant="8" id="NEn-dQ-jSM"/>
-                            <constraint firstItem="1273" firstAttribute="top" secondItem="1505" secondAttribute="top" constant="8" id="Qx2-tm-w8t"/>
-                            <constraint firstAttribute="height" constant="36" id="TUD-Qg-tlS"/>
-                            <constraint firstAttribute="bottom" secondItem="852" secondAttribute="bottom" constant="8" id="TeY-CC-U4T"/>
+                            <constraint firstAttribute="centerY" secondItem="1273" secondAttribute="centerY" id="Df4-TN-PKm"/>
+                            <constraint firstAttribute="centerY" secondItem="1212" secondAttribute="centerY" id="LHg-Ww-NE0"/>
+                            <constraint firstAttribute="height" constant="24" id="TUD-Qg-tlS"/>
+                            <constraint firstAttribute="centerY" secondItem="1103" secondAttribute="centerY" id="U6k-aL-QFA"/>
                             <constraint firstItem="852" firstAttribute="leading" secondItem="1505" secondAttribute="leading" constant="20" id="byI-gw-I0D"/>
                             <constraint firstAttribute="trailing" secondItem="1103" secondAttribute="trailing" constant="40" id="etp-em-KId"/>
-                            <constraint firstItem="1103" firstAttribute="top" secondItem="1505" secondAttribute="top" constant="8" id="hoO-TY-2C2"/>
+                            <constraint firstAttribute="centerY" secondItem="852" secondAttribute="centerY" id="knw-MO-eWz"/>
                             <constraint firstAttribute="centerY" secondItem="1569" secondAttribute="centerY" id="mQJ-hP-bBw"/>
-                            <constraint firstAttribute="bottom" secondItem="1212" secondAttribute="bottom" constant="10" id="oQk-8m-n96"/>
-                            <constraint firstItem="1212" firstAttribute="top" secondItem="1505" secondAttribute="top" constant="10" id="pJE-OX-z3y"/>
                             <constraint firstItem="1077" firstAttribute="leading" secondItem="1505" secondAttribute="leading" constant="108" id="vMZ-sp-s7j"/>
                             <constraint firstItem="1273" firstAttribute="centerX" secondItem="1077" secondAttribute="centerX" id="zxx-jc-rwq"/>
                         </constraints>
@@ -165,22 +162,22 @@
                         <accessibility help="Message toolbar"/>
                     </box>
                     <splitView wantsLayer="YES" focusRingType="none" autosaveName="MainSplitterAutosave" dividerStyle="thin" vertical="YES" translatesAutoresizingMaskIntoConstraints="NO" id="838">
-                        <rect key="frame" x="0.0" y="0.0" width="1024" height="651"/>
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="663"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES"/>
                         <subviews>
                             <customView wantsLayer="YES" focusRingType="none" id="839" userLabel="Accounts View">
-                                <rect key="frame" x="0.0" y="0.0" width="272" height="651"/>
+                                <rect key="frame" x="0.0" y="0.0" width="272" height="663"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" heightSizable="YES"/>
                                 <subviews>
                                     <scrollView focusRingType="none" borderType="none" autohidesScrollers="YES" horizontalLineScroll="24" horizontalPageScroll="10" verticalLineScroll="24" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1057">
-                                        <rect key="frame" x="0.0" y="0.0" width="271" height="651"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="271" height="663"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES"/>
                                         <clipView key="contentView" copiesOnScroll="NO" id="kgZ-jh-3MW">
-                                            <rect key="frame" x="0.0" y="0.0" width="271" height="651"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="271" height="663"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <subviews>
                                                 <outlineView focusRingType="none" verticalHuggingPriority="750" horizontalCompressionResistancePriority="948" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" selectionHighlightStyle="sourceList" columnReordering="NO" multipleSelection="NO" typeSelect="NO" autosaveName="AccountSidebarView" rowHeight="24" rowSizeStyle="systemDefault" viewBased="YES" indentationPerLevel="14" outlineTableColumn="1062" id="1061" customClass="MBSidebarView">
-                                                    <rect key="frame" x="0.0" y="0.0" width="271" height="651"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="271" height="663"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <size key="intercellSpacing" width="3" height="0.0"/>
                                                     <color key="backgroundColor" name="_sourceListBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -309,11 +306,11 @@
                                 </constraints>
                             </customView>
                             <customView wantsLayer="YES" focusRingType="none" id="840" userLabel="Messages View">
-                                <rect key="frame" x="273" y="0.0" width="751" height="651"/>
+                                <rect key="frame" x="273" y="0.0" width="751" height="663"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <splitView wantsLayer="YES" autosaveName="MessagesSplitterAutosave" dividerStyle="thin" translatesAutoresizingMaskIntoConstraints="NO" id="1080" userLabel="Messages Split View">
-                                        <rect key="frame" x="0.0" y="0.0" width="751" height="651"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="751" height="663"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES"/>
                                         <subviews>
                                             <customView id="1081" userLabel="Portals View">
@@ -368,18 +365,18 @@
                                                 <accessibility help="Portals"/>
                                             </customView>
                                             <customView wantsLayer="YES" focusRingType="none" horizontalHuggingPriority="249" id="1082" userLabel="Message View">
-                                                <rect key="frame" x="0.0" y="319" width="751" height="332"/>
+                                                <rect key="frame" x="0.0" y="319" width="751" height="344"/>
                                                 <autoresizingMask key="autoresizingMask"/>
                                                 <subviews>
                                                     <scrollView wantsLayer="YES" borderType="none" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jbs-sY-zqu">
-                                                        <rect key="frame" x="0.0" y="0.0" width="751" height="332"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="751" height="344"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                                         <clipView key="contentView" wantsLayer="YES" id="5k9-DR-QWV">
-                                                            <rect key="frame" x="0.0" y="0.0" width="751" height="332"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="751" height="344"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <subviews>
                                                                 <view wantsLayer="YES" horizontalHuggingPriority="249" verticalCompressionResistancePriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="Ovp-zj-tQH" customClass="MBMessagesDesktopView">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="751" height="332"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="751" height="344"/>
                                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                     <userDefinedRuntimeAttributes>
                                                                         <userDefinedRuntimeAttribute type="string" keyPath="contentBindingKeyPath" value="arrangedObjects"/>
@@ -397,14 +394,14 @@
                                                                 <constraint firstAttribute="trailing" secondItem="Ovp-zj-tQH" secondAttribute="trailing" priority="538" id="mfS-Fo-ANX"/>
                                                                 <constraint firstItem="Ovp-zj-tQH" firstAttribute="leading" secondItem="5k9-DR-QWV" secondAttribute="leading" id="z5Q-Zl-mll"/>
                                                             </constraints>
-                                                            <color key="backgroundColor" patternImage="5A323324-CBCB-480D-A857-E49D3BE46DE6" colorSpace="pattern"/>
+                                                            <color key="backgroundColor" patternImage="2729F054-78EA-4165-8654-DD0DF6E8A653" colorSpace="pattern"/>
                                                         </clipView>
                                                         <scroller key="horizontalScroller" verticalHuggingPriority="750" id="fzv-cM-tBI">
-                                                            <rect key="frame" x="0.0" y="316" width="751" height="16"/>
+                                                            <rect key="frame" x="0.0" y="328" width="751" height="16"/>
                                                             <autoresizingMask key="autoresizingMask"/>
                                                         </scroller>
                                                         <scroller key="verticalScroller" verticalHuggingPriority="750" doubleValue="1" id="IbM-9h-U1Q">
-                                                            <rect key="frame" x="735" y="0.0" width="16" height="332"/>
+                                                            <rect key="frame" x="736" y="0.0" width="15" height="344"/>
                                                             <autoresizingMask key="autoresizingMask"/>
                                                         </scroller>
                                                     </scrollView>
@@ -1506,7 +1503,7 @@
         </menu>
     </objects>
     <resources>
-        <image name="5A323324-CBCB-480D-A857-E49D3BE46DE6" width="450" height="420">
+        <image name="2729F054-78EA-4165-8654-DD0DF6E8A653" width="450" height="420">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGOzxYJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK0HCBEW
 GxwgISksLzU4VSRudWxs1AkKCwwNDg8QViRjbGFzc1xOU0ltYWdlRmxhZ3NWTlNSZXBzV05TQ29sb3KA
