--- a/en.lproj/MBVPortalViewController.xib
+++ b/en.lproj/MBVPortalViewController.xib
@@ -20,7 +20,7 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application"/>
         <customView focusRingType="none" appearanceType="lightContent" id="1" userLabel="Portal View">
-            <rect key="frame" x="0.0" y="0.0" width="264" height="320"/>
+            <rect key="frame" x="0.0" y="0.0" width="264" height="319.99999999019161"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES"/>
             <subviews>
                 <box autoresizesSubviews="NO" focusRingType="none" borderWidth="0.0" title="Portal" boxType="custom" borderType="line" titlePosition="noTitle" translatesAutoresizingMaskIntoConstraints="NO" id="2" userLabel="portalBox" customClass="MBPortalView">
@@ -177,7 +177,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="260" height="271"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES"/>
                                 <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="Xel-8u-QIZ">
-                                    <rect key="frame" x="0.0" y="9.8084456112701446e-09" width="260" height="271"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="260" height="271"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <tableView focusRingType="none" verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="none" selectionHighlightStyle="sourceList" columnReordering="NO" columnResizing="NO" typeSelect="NO" autosaveName="autosaveMessageSelection" rowHeight="70" rowSizeStyle="automatic" viewBased="YES" id="204">
@@ -379,7 +379,7 @@
             <connections>
                 <binding destination="-2" name="sortDescriptors" keyPath="collectionItemSortDescriptors" previousBinding="lhs-3I-kLG" id="Ntq-km-47T"/>
                 <binding destination="-2" name="filterPredicate" keyPath="compoundPredicate" id="lhs-3I-kLG"/>
-                <binding destination="-3" name="managedObjectContext" keyPath="delegate.nibManagedObjectContext" id="178"/>
+                <binding destination="-3" name="managedObjectContext" keyPath="delegate.mainObjectContext" id="fnI-b6-hta"/>
                 <binding destination="-2" name="contentSet" keyPath="self.representedObject.messageArraySource.messages" id="QVM-HV-0Bn"/>
             </connections>
         </arrayController>
